--- a/gatewayConfig.json
+++ b/gatewayConfig.json
@@ -18,7 +18,7 @@
             ]
         },
         {
-            "url": "http://localhost:3002",
+            "url": "http://0.0.0.0:3002",
             "services": [
                 {
                     "method": "get",
