--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
-  "name": "apigateway",
+  "name": "gateway",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "cross-env NODE_TLS_REJECT_UNAUTHORIZED='0' node gateway.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -11,6 +12,7 @@
   "dependencies": {
     "axios": "^1.5.1",
     "body-parser": "^1.20.2",
+    "cross-env": "^7.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.6.3",
     "morgan": "^1.10.0"
